quick spacing fixes

--- a/src/components/Replies/Replies.scss
+++ b/src/components/Replies/Replies.scss
@@ -2,7 +2,7 @@
 
 .Post-replies {
   width: 100%;
-  margin-top: 10px;
+  // margin-top: 10px;
 
   .Post-replies-show {
     width: fit-content;
